--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "@react-types/combobox": "^3.5.5",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -16,7 +18,9 @@
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-aria": "^3.21.0",
     "react-dom": "18.2.0",
+    "react-stately": "^3.19.0",
     "typescript": "4.9.3"
   }
 }
